src/parser/rGURAParser.cpp

// Generated from rGURA.g4 by ANTLR 4.7


#include "rGURAListener.h"

#include "rGURAParser.h"


using namespace antlrcpp;
using namespace VAC;
using namespace antlr4;

rGURAParser::rGURAParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

rGURAParser::~rGURAParser() {
  delete _interpreter;
}

std::string rGURAParser::getGrammarFileName() const {
  return "rGURA.g4";
}

const std::vector<std::string>& rGURAParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& rGURAParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

rGURAParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<rGURAParser::R_startContext *> rGURAParser::FileContext::r_start() {
  return getRuleContexts<rGURAParser::R_startContext>();
}

rGURAParser::R_startContext* rGURAParser::FileContext::r_start(size_t i) {
  return getRuleContext<rGURAParser::R_startContext>(i);
}


size_t rGURAParser::FileContext::getRuleIndex() const {
  return rGURAParser::RuleFile;
}

void rGURAParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void rGURAParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

rGURAParser::FileContext* rGURAParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, rGURAParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(44);
      r_start();
      setState(47); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << rGURAParser::USER)
      | (1ULL << rGURAParser::ATTR_S)
      | (1ULL << rGURAParser::ATTR_M)
      | (1ULL << rGURAParser::SCOPE)
      | (1ULL << rGURAParser::AR)
      | (1ULL << rGURAParser::UAS)
      | (1ULL << rGURAParser::UAM)
      | (1ULL << rGURAParser::RULE)
      | (1ULL << rGURAParser::SPEC))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_startContext ------------------------------------------------------------------

rGURAParser::R_startContext::R_startContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

rGURAParser::R_userContext* rGURAParser::R_startContext::r_user() {
  return getRuleContext<rGURAParser::R_userContext>(0);
}

rGURAParser::R_attr_sContext* rGURAParser::R_startContext::r_attr_s() {
  return getRuleContext<rGURAParser::R_attr_sContext>(0);
}

rGURAParser::R_attr_mContext* rGURAParser::R_startContext::r_attr_m() {
  return getRuleContext<rGURAParser::R_attr_mContext>(0);
}

rGURAParser::R_scopeContext* rGURAParser::R_startContext::r_scope() {
  return getRuleContext<rGURAParser::R_scopeContext>(0);
}

rGURAParser::R_adminContext* rGURAParser::R_startContext::r_admin() {
  return getRuleContext<rGURAParser::R_adminContext>(0);
}

rGURAParser::R_ua_sContext* rGURAParser::R_startContext::r_ua_s() {
  return getRuleContext<rGURAParser::R_ua_sContext>(0);
}

rGURAParser::R_ua_mContext* rGURAParser::R_startContext::r_ua_m() {
  return getRuleContext<rGURAParser::R_ua_mContext>(0);
}

rGURAParser::R_rulesContext* rGURAParser::R_startContext::r_rules() {
  return getRuleContext<rGURAParser::R_rulesContext>(0);
}

rGURAParser::R_specContext* rGURAParser::R_startContext::r_spec() {
  return getRuleContext<rGURAParser::R_specContext>(0);
}


size_t rGURAParser::R_startContext::getRuleIndex() const {
  return rGURAParser::RuleR_start;
}

void rGURAParser::R_startContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_start(this);
}

void rGURAParser::R_startContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_start(this);
}

rGURAParser::R_startContext* rGURAParser::r_start() {
  R_startContext *_localctx = _tracker.createInstance<R_startContext>(_ctx, getState());
  enterRule(_localctx, 2, rGURAParser::RuleR_start);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(58);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case rGURAParser::USER: {
        enterOuterAlt(_localctx, 1);
        setState(49);
        r_user();
        break;
      }

      case rGURAParser::ATTR_S: {
        enterOuterAlt(_localctx, 2);
        setState(50);
        r_attr_s();
        break;
      }

      case rGURAParser::ATTR_M: {
        enterOuterAlt(_localctx, 3);
        setState(51);
        r_attr_m();
        break;
      }

      case rGURAParser::SCOPE: {
        enterOuterAlt(_localctx, 4);
        setState(52);
        r_scope();
        break;
      }

      case rGURAParser::AR: {
        enterOuterAlt(_localctx, 5);
        setState(53);
        r_admin();
        break;
      }

      case rGURAParser::UAS: {
        enterOuterAlt(_localctx, 6);
        setState(54);
        r_ua_s();
        break;
      }

      case rGURAParser::UAM: {
        enterOuterAlt(_localctx, 7);
        setState(55);
        r_ua_m();
        break;
      }

      case rGURAParser::RULE: {
        enterOuterAlt(_localctx, 8);
        setState(56);
        r_rules();
        break;
      }

      case rGURAParser::SPEC: {
        enterOuterAlt(_localctx, 9);
        setState(57);
        r_spec();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_userContext ------------------------------------------------------------------

rGURAParser::R_userContext::R_userContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::R_userContext::USER() {
  return getToken(rGURAParser::USER, 0);
}

tree::TerminalNode* rGURAParser::R_userContext::SEMI() {
  return getToken(rGURAParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> rGURAParser::R_userContext::Identifier() {
  return getTokens(rGURAParser::Identifier);
}

tree::TerminalNode* rGURAParser::R_userContext::Identifier(size_t i) {
  return getToken(rGURAParser::Identifier, i);
}


size_t rGURAParser::R_userContext::getRuleIndex() const {
  return rGURAParser::RuleR_user;
}

void rGURAParser::R_userContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_user(this);
}

void rGURAParser::R_userContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_user(this);
}

rGURAParser::R_userContext* rGURAParser::r_user() {
  R_userContext *_localctx = _tracker.createInstance<R_userContext>(_ctx, getState());
  enterRule(_localctx, 4, rGURAParser::RuleR_user);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    match(rGURAParser::USER);
    setState(64);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rGURAParser::Identifier) {
      setState(61);
      match(rGURAParser::Identifier);
      setState(66);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(67);
    match(rGURAParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_attr_sContext ------------------------------------------------------------------

rGURAParser::R_attr_sContext::R_attr_sContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::R_attr_sContext::ATTR_S() {
  return getToken(rGURAParser::ATTR_S, 0);
}

tree::TerminalNode* rGURAParser::R_attr_sContext::SEMI() {
  return getToken(rGURAParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> rGURAParser::R_attr_sContext::Identifier() {
  return getTokens(rGURAParser::Identifier);
}

tree::TerminalNode* rGURAParser::R_attr_sContext::Identifier(size_t i) {
  return getToken(rGURAParser::Identifier, i);
}


size_t rGURAParser::R_attr_sContext::getRuleIndex() const {
  return rGURAParser::RuleR_attr_s;
}

void rGURAParser::R_attr_sContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_attr_s(this);
}

void rGURAParser::R_attr_sContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_attr_s(this);
}

rGURAParser::R_attr_sContext* rGURAParser::r_attr_s() {
  R_attr_sContext *_localctx = _tracker.createInstance<R_attr_sContext>(_ctx, getState());
  enterRule(_localctx, 6, rGURAParser::RuleR_attr_s);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(rGURAParser::ATTR_S);
    setState(73);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rGURAParser::Identifier) {
      setState(70);
      match(rGURAParser::Identifier);
      setState(75);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(76);
    match(rGURAParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_attr_mContext ------------------------------------------------------------------

rGURAParser::R_attr_mContext::R_attr_mContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::R_attr_mContext::ATTR_M() {
  return getToken(rGURAParser::ATTR_M, 0);
}

tree::TerminalNode* rGURAParser::R_attr_mContext::SEMI() {
  return getToken(rGURAParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> rGURAParser::R_attr_mContext::Identifier() {
  return getTokens(rGURAParser::Identifier);
}

tree::TerminalNode* rGURAParser::R_attr_mContext::Identifier(size_t i) {
  return getToken(rGURAParser::Identifier, i);
}


size_t rGURAParser::R_attr_mContext::getRuleIndex() const {
  return rGURAParser::RuleR_attr_m;
}

void rGURAParser::R_attr_mContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_attr_m(this);
}

void rGURAParser::R_attr_mContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_attr_m(this);
}

rGURAParser::R_attr_mContext* rGURAParser::r_attr_m() {
  R_attr_mContext *_localctx = _tracker.createInstance<R_attr_mContext>(_ctx, getState());
  enterRule(_localctx, 8, rGURAParser::RuleR_attr_m);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(rGURAParser::ATTR_M);
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rGURAParser::Identifier) {
      setState(79);
      match(rGURAParser::Identifier);
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(85);
    match(rGURAParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_scopeContext ------------------------------------------------------------------

rGURAParser::R_scopeContext::R_scopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::R_scopeContext::SCOPE() {
  return getToken(rGURAParser::SCOPE, 0);
}

tree::TerminalNode* rGURAParser::R_scopeContext::SEMI() {
  return getToken(rGURAParser::SEMI, 0);
}

std::vector<rGURAParser::Scope_elementContext *> rGURAParser::R_scopeContext::scope_element() {
  return getRuleContexts<rGURAParser::Scope_elementContext>();
}

rGURAParser::Scope_elementContext* rGURAParser::R_scopeContext::scope_element(size_t i) {
  return getRuleContext<rGURAParser::Scope_elementContext>(i);
}


size_t rGURAParser::R_scopeContext::getRuleIndex() const {
  return rGURAParser::RuleR_scope;
}

void rGURAParser::R_scopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_scope(this);
}

void rGURAParser::R_scopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_scope(this);
}

rGURAParser::R_scopeContext* rGURAParser::r_scope() {
  R_scopeContext *_localctx = _tracker.createInstance<R_scopeContext>(_ctx, getState());
  enterRule(_localctx, 10, rGURAParser::RuleR_scope);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(rGURAParser::SCOPE);
    setState(91);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rGURAParser::LEFTTUPLE) {
      setState(88);
      scope_element();
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(94);
    match(rGURAParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Scope_elementContext ------------------------------------------------------------------

rGURAParser::Scope_elementContext::Scope_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::Scope_elementContext::LEFTTUPLE() {
  return getToken(rGURAParser::LEFTTUPLE, 0);
}

std::vector<tree::TerminalNode *> rGURAParser::Scope_elementContext::Identifier() {
  return getTokens(rGURAParser::Identifier);
}

tree::TerminalNode* rGURAParser::Scope_elementContext::Identifier(size_t i) {
  return getToken(rGURAParser::Identifier, i);
}

rGURAParser::SepContext* rGURAParser::Scope_elementContext::sep() {
  return getRuleContext<rGURAParser::SepContext>(0);
}

tree::TerminalNode* rGURAParser::Scope_elementContext::RIGHTTUPLE() {
  return getToken(rGURAParser::RIGHTTUPLE, 0);
}


size_t rGURAParser::Scope_elementContext::getRuleIndex() const {
  return rGURAParser::RuleScope_element;
}

void rGURAParser::Scope_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScope_element(this);
}

void rGURAParser::Scope_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScope_element(this);
}

rGURAParser::Scope_elementContext* rGURAParser::scope_element() {
  Scope_elementContext *_localctx = _tracker.createInstance<Scope_elementContext>(_ctx, getState());
  enterRule(_localctx, 12, rGURAParser::RuleScope_element);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(rGURAParser::LEFTTUPLE);
    setState(97);
    match(rGURAParser::Identifier);
    setState(98);
    sep();
    setState(100); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(99);
      match(rGURAParser::Identifier);
      setState(102); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == rGURAParser::Identifier);
    setState(104);
    match(rGURAParser::RIGHTTUPLE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SepContext ------------------------------------------------------------------

rGURAParser::SepContext::SepContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::SepContext::COMMA() {
  return getToken(rGURAParser::COMMA, 0);
}

tree::TerminalNode* rGURAParser::SepContext::COLON() {
  return getToken(rGURAParser::COLON, 0);
}


size_t rGURAParser::SepContext::getRuleIndex() const {
  return rGURAParser::RuleSep;
}

void rGURAParser::SepContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSep(this);
}

void rGURAParser::SepContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSep(this);
}

rGURAParser::SepContext* rGURAParser::sep() {
  SepContext *_localctx = _tracker.createInstance<SepContext>(_ctx, getState());
  enterRule(_localctx, 14, rGURAParser::RuleSep);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    _la = _input->LA(1);
    if (!(_la == rGURAParser::COMMA

    || _la == rGURAParser::COLON)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_adminContext ------------------------------------------------------------------

rGURAParser::R_adminContext::R_adminContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::R_adminContext::AR() {
  return getToken(rGURAParser::AR, 0);
}

tree::TerminalNode* rGURAParser::R_adminContext::SEMI() {
  return getToken(rGURAParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> rGURAParser::R_adminContext::Identifier() {
  return getTokens(rGURAParser::Identifier);
}

tree::TerminalNode* rGURAParser::R_adminContext::Identifier(size_t i) {
  return getToken(rGURAParser::Identifier, i);
}


size_t rGURAParser::R_adminContext::getRuleIndex() const {
  return rGURAParser::RuleR_admin;
}

void rGURAParser::R_adminContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_admin(this);
}

void rGURAParser::R_adminContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_admin(this);
}

rGURAParser::R_adminContext* rGURAParser::r_admin() {
  R_adminContext *_localctx = _tracker.createInstance<R_adminContext>(_ctx, getState());
  enterRule(_localctx, 16, rGURAParser::RuleR_admin);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(rGURAParser::AR);
    setState(112);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rGURAParser::Identifier) {
      setState(109);
      match(rGURAParser::Identifier);
      setState(114);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(115);
    match(rGURAParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_ua_sContext ------------------------------------------------------------------

rGURAParser::R_ua_sContext::R_ua_sContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::R_ua_sContext::UAS() {
  return getToken(rGURAParser::UAS, 0);
}

tree::TerminalNode* rGURAParser::R_ua_sContext::SEMI() {
  return getToken(rGURAParser::SEMI, 0);
}

std::vector<rGURAParser::Uas_elementContext *> rGURAParser::R_ua_sContext::uas_element() {
  return getRuleContexts<rGURAParser::Uas_elementContext>();
}

rGURAParser::Uas_elementContext* rGURAParser::R_ua_sContext::uas_element(size_t i) {
  return getRuleContext<rGURAParser::Uas_elementContext>(i);
}


size_t rGURAParser::R_ua_sContext::getRuleIndex() const {
  return rGURAParser::RuleR_ua_s;
}

void rGURAParser::R_ua_sContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_ua_s(this);
}

void rGURAParser::R_ua_sContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_ua_s(this);
}

rGURAParser::R_ua_sContext* rGURAParser::r_ua_s() {
  R_ua_sContext *_localctx = _tracker.createInstance<R_ua_sContext>(_ctx, getState());
  enterRule(_localctx, 18, rGURAParser::RuleR_ua_s);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(rGURAParser::UAS);
    setState(121);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == rGURAParser::Identifier) {
      setState(118);
      uas_element();
      setState(123);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(124);
    match(rGURAParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Uas_elementContext ------------------------------------------------------------------

rGURAParser::Uas_elementContext::Uas_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::Uas_elementContext::Identifier() {
  return getToken(rGURAParser::Identifier, 0);
}

std::vector<rGURAParser::Attr_valContext *> rGURAParser::Uas_elementContext::attr_val() {
  return getRuleContexts<rGURAParser::Attr_valContext>();
}

rGURAParser::Attr_valContext* rGURAParser::Uas_elementContext::attr_val(size_t i) {
  return getRuleContext<rGURAParser::Attr_valContext>(i);
}


size_t rGURAParser::Uas_elementContext::getRuleIndex() const {
  return rGURAParser::RuleUas_element;
}

void rGURAParser::Uas_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUas_element(this);
}

void rGURAParser::Uas_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUas_element(this);
}

rGURAParser::Uas_elementContext* rGURAParser::uas_element() {
  Uas_elementContext *_localctx = _tracker.createInstance<Uas_elementContext>(_ctx, getState());
  enterRule(_localctx, 20, rGURAParser::RuleUas_element);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(rGURAParser::Identifier);
    setState(128); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(127);
      attr_val();
      setState(130); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == rGURAParser::LEFTTUPLE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attr_valContext ------------------------------------------------------------------

rGURAParser::Attr_valContext::Attr_valContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* rGURAParser::Attr_valContext::LEFTTUPLE() {
  return getToken(rGURAParser::LEFTTUPLE, 0);
}

tree::TerminalNode* rGURAParser::Attr_valContext::COMMA() {
  return getToken(rGURAParser::COMMA, 0);
}

tree::TerminalNode* rGURAParser::Attr_valContext::RIGHTTUPLE() {
  return getToken(rGURAParser::RIGHTTUPLE, 0);
}

std::vector<tree::TerminalNode *> rGURAParser::Attr_valContext::Identifier() {
  return getTokens(rGURAParser::Identifier);
}

tree::TerminalNode* rGURAParser::Attr_valContext::Identifier(size_t i) {
  return getToken(rGURAParser::Identifier, i);
}


size_t rGURAParser::Attr_valContext::getRuleIndex() const {
  return rGURAParser::RuleAttr_val;
}

void rGURAParser::Attr_valContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttr_val(this);
}

void rGURAParser::Attr_valContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<rGURAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttr_val(this);
}

rGURAParser::Attr_valContext* rGURAParser::attr_val() {
  Attr_valContext *_localctx = _tracker.createInstance<Attr_valContext>(_ctx, getState());
  enterRule(_localctx, 22, rGURAParser::RuleAttr_val);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(rGURAParser::LEFTTUPLE);
    setState(133);
    dynamic_cast<Attr_valContext *>(_localctx)->a = match(rGURAParser::Identifier);
    setState(134);
    match(rGURAParser::COMMA);
    setState(135);
    dynamic_cast<Attr_valContext *>(_localctx)->v = match(rGURAParser::Identifier);
    setState(136);
    match(rGURAParser::RIGHTTUPLE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_ua_mContext ------------------------------------------------------------------
